	* Header: Allow to search for the special player !mymove. Similar to !me but the player has to have the move at the end of the game.
	* Position: added the possibility to search for current position in another opened base (this avoids the use of the Tree window that can also be used for this, but can be found less convenient).
- User interface:
	* blindfold play (piece set)
	* Add SAA/CUA hotkeys for clipboard (Ctrl-Ins, Shift-Ins)
	* try for www-browser as generic web browser (thanks to Tiurgin)
	* replace " " in urls for the Windows "start" command by %20 (thanks to Tiurgin)
- Translations:
	* hungarian updated (thanks to Szőts Gábor)
	* swedish updated (thanks to Hans Eriksson)
	* added catalan translation (thanks to Natalia Pares Vives)
- Game merging : it is now possible to merge directly a game from one base to the current game in another base (see context menu in Game list window)
- Engines handling : 
	* renamed Phalanx-XII to phalanx-scid (as Phalanx is no longer maintained we need a way to differentiate them)
	* try to auto-configure engines (scidlet, toga and phalanx) (thanks to Israel Chauca)
- Game annotation : book to use is saved (defaults to same book as Book window)
- HTML export of games (HTML + Javascript) : improved output, better piece sets, no frames (thanks to Charly Founes) 
- Novag Citrine support : improved interface

[April 2009 ]

scid-3.7.3
-----------
Maintenance release of Scid 3.7.2 fixing a bug in search position

[xxx 2009 ]

scid-3.7.4
-----------
- Fixes :
  * serious game play when use book is checked and book name is empty leads to crash (thanks to Benigno Hernández)
- Features
  * NAG support : add symbolic NAGs using UTF-8
  * Search position : if the search is done in a refrerence base (not the current one), don't switch to it if the result returns no gme
- Translations:	
  * updated spanish translation (thanks to Benigno Hernández)