@@ -792,8 +792,12 @@ scid-3.7.4
 -----------
 - Fixes :
   * serious game play when use book is checked and book name is empty leads to crash (thanks to Benigno Hernández)
+  * Check for engines allowed in eMail games caused an exception (noENG not set)
 - Features
-  * NAG support : add symbolic NAGs using UTF-8
+  * NAG support : add symbolic NAGs using UTF-8 symbols
   * Search position : if the search is done in a refrerence base (not the current one), don't switch to it if the result returns no gme
-- Translations:	
+- Correspondence Chess:
+	* Sorting of the gamelist  by various criteria like own clock, opponent clock (Xfcc only)
+	* Do not show games where the player does not have the move (Xfcc only)
+- Translations:
   * updated spanish translation (thanks to Benigno Hernández)
